# jay-ai-agent-roadmap-archive

./: .gitignore  12-week-execution-discipline.md  90-day-start-plan.md  MIGRATION-MANIFEST.md  README.md  assetization-system.md  cs-foundations-integration.md  github-portfolio-checklist.md  homework-review-system.md  job-description-analysis-template.md  roadmap.md  this-week.md  weekly-operating-system.md
conversation-archive/: 2026-05-20-ai-era-skills-roadmap.md
daily-homework/: README.md
homework-reviews/: 2026-05-21-revised-review.md  2026-05-22-review.md  2026-05-23-review.md  2026-05-24-review.md  2026-05-25-review.md  2026-05-26-review.md  2026-05-27-week-01-review.md  2026-05-28-review.md  2026-05-29-review.md  2026-05-30-review.md  2026-05-31-review.md  2026-06-01-review.md  2026-06-02-review.md  2026-06-03-week-02-summary-review.md  2026-06-04-review.md  2026-06-05-review.md  2026-06-06-review.md  2026-06-07-review.md  2026-06-08-review.md  2026-06-09-review.md  2026-06-10-review.md  2026-06-11-review.md  2026-06-12-review.md  2026-06-13-review.md  2026-06-14-review.md  2026-06-15-review.md  2026-06-16-review.md  2026-06-17-review.md  2026-06-18-review.md  (+1 more)
python-foundations/first-CLI/: README.md  main.py  pyproject.toml  test.json  test1.txt  text_status.py  word_chunk.py  word_freq.py
python-foundations/first-CLI/src/: create_json.py  main.py  summarize.py  text_status.py  word_chunk.py  word_freq.py
python-foundations/first-CLI/tests/: test_createjson.py  test_summarize.py  test_text_status.py  test_word_chunk.py  test_word_freq.py
(+297 files in other folders)
