[project]
name = "first-cli"
version = "0.1.0"
description = "This is my first cli-based text tools"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = "MIT lisense"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
